<resources>
    <string name="app_name">SMS App</string>
    <string name="Welcome_text">Android Studio\nSimple SMS App</string>
    <string name="credits">Designed By Santhosh S 200701221 REC\nMobile Application Development Laboratory</string>
    <string name="get_started">Get Started</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_message">Enter Message</string>
    <string name="reset">Reset?</string>
    <string name="hello_again">Hello again!</string>
    <string name="send">Send</string>
    <string name="welcome_to_our_sms_app_nenter_the_receiver_number_and_n_message">Welcome to our SMS App\nEnter the Receiver number and\n message</string>
</resources>